--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -1,3 +1,19 @@
-<h1>things and stuff</h1>
-<script type="text/javascript" src="js/testjs.js"></script>
-<link type="text/stylesheet" href="css/testcss.css"></link>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Test</title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/ui-lightness/jquery-ui.css">
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/ui-lightness/jquery-ui.css">
+    <link rel="stylesheet" href="css/testcss.css">
+  </head>
+  <body>
+    <p>Hello world! This is a test.</p>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>alert('This should not be replaced.');</script>
+    <script src="js/testjs.js"></script>
+  </body>
+</html>
