--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -11,6 +11,8 @@
   <body>
     <p>Hello world! This is a test.</p>
 
+    <img src="tiny.gif">
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>alert('This should not be replaced.');</script>
