--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -13,7 +13,7 @@
 
     <img src="tiny.gif">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>alert('This should not be replaced.');</script>
     <script src="js/testjs.js"></script>
